# auto-play-in-mpv

./: .gitignore  README.md  main.js  main.py  pyproject.toml
apim/: __init__.py
