[project]
name = "open-in-mpv"
version = "0.1.0"
description = "Open online video in local mpv player"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["websockets>=13.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main"]
